tests/errors/syn_method14.java
public class syn_method14 {
public static String[] main ) {
 
}
}